// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Claims SnapshotList Filter should filter the claims correctly 1`] = `
<div>
  <main
    class="flex flex-col justify-center items-center page"
  >
    <div
      class="flex flex-col app-content app-base-font-color"
    >
      <h2
        class="title-2 mb-0 !font-light !text-[32px]/[40px]"
      >
        Claims
      </h2>
      <span
        style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
      />
      <section
        class="flex justify-start self-start"
      >
        <div
          class="flex flex-col"
        >
          <span
            class="rich-text body-1 mb-4"
          >
            <span>
              If you need more than two years of claims,
               
            </span>
            <span
              class="link font-bold"
            >
              start a chat
            </span>
            <span>
               or call us at [1-800-000-000].
            </span>
          </span>
          <span
            class="rich-text body-1 undefined"
          >
            <span>
              Need to submit a claim? 
            </span>
            <span
              class="link font-bold"
            >
              <a
                href="/claims/submitAClaim"
              >
                Get the form you need
              </a>
            </span>
            <span>
              .
            </span>
          </span>
        </div>
      </section>
      <section
        class="flex flex-row items-start app-body"
        id="Filter"
      >
        <div
          class="flex flex-col  flex-grow page-section-36_67 items-stretch"
        >
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
          <div
            class="card-main large-section px-0 m-0"
          >
            <div
              class="flex flex-col"
            >
              <h1
                class="title-1 title-2"
              >
                Filter Claims
              </h1>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
              />
              <div
                class="flex flex-col"
              >
                <div
                  class="body-1"
                >
                  Member
                   
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <div>
                  <div
                    class="rich-dropdown"
                  >
                    <div
                      class="flex flex-col switch-filter default"
                      tabindex="1"
                    >
                      <div>
                        <div
                          class="body-1 input"
                        >
                          <div
                            class="flex flex-row p-1 items-center"
                          >
                            <div
                              class="flex flex-col border-none flex-grow"
                            >
                              <p
                                class="body-1"
                                style="display: block;"
                              >
                                CHRISTMAS HALL
                              </p>
                            </div>
                            <img
                              alt=""
                              class="w-[20px] h-[20px] ml-2 items-end"
                              data-nimg="1"
                              decoding="async"
                              height="40"
                              loading="lazy"
                              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                              style="color: transparent;"
                              width="40"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
              <div
                class="flex flex-col"
              >
                <div
                  class="body-1"
                >
                  Claim Type
                   
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <div>
                  <div
                    class="rich-dropdown"
                  >
                    <div
                      class="flex flex-col switch-filter default"
                      tabindex="1"
                    >
                      <div>
                        <div
                          class="body-1 input"
                        >
                          <div
                            class="flex flex-row p-1 items-center"
                          >
                            <div
                              class="flex flex-col border-none flex-grow"
                            >
                              <p
                                class="body-1"
                                style="display: block;"
                              >
                                All Types
                              </p>
                            </div>
                            <img
                              alt=""
                              class="w-[20px] h-[20px] ml-2 items-end"
                              data-nimg="1"
                              decoding="async"
                              height="40"
                              loading="lazy"
                              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                              style="color: transparent;"
                              width="40"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
              <div
                class="flex flex-col"
              >
                <div
                  class="body-1"
                >
                  Date Range
                   
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <div>
                  <div
                    class="rich-dropdown"
                  >
                    <div
                      class="flex flex-col switch-filter default"
                      tabindex="1"
                    >
                      <div>
                        <div
                          class="body-1 input"
                        >
                          <div
                            class="flex flex-row p-1 items-center"
                          >
                            <div
                              class="flex flex-col border-none flex-grow"
                            >
                              <p
                                class="body-1"
                                style="display: block;"
                              >
                                Last Two Years
                              </p>
                            </div>
                            <img
                              alt=""
                              class="w-[20px] h-[20px] ml-2 items-end"
                              data-nimg="1"
                              decoding="async"
                              height="40"
                              loading="lazy"
                              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                              style="color: transparent;"
                              width="40"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
              <a
                class="link flex !no-underline"
                href="#"
              >
                <img
                  alt=""
                  class="w-[20px] h-[20px] ml-2 mr-2 items-end"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
                Reset Filter
              </a>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
            </div>
          </div>
        </div>
        <div
          class="flex flex-col flex-grow page-section-63_33 items-stretch"
        >
          <div
            class="flex flex-col"
          >
            <section
              class="card-main max-sm:my-4 md:my-8"
              role="search"
            >
              <div
                class="flex flex-row items-center input   "
              >
                <input
                  aria-label="Search claims by member name, provider name, or claim ID"
                  class="body-1 search-textfield"
                  name="search-Field"
                  placeholder="Search Claims..."
                  type="text"
                  value=""
                />
                <div
                  class="flex flex-col items-end"
                >
                  <button
                    aria-label="Search"
                    class="flex flex-col p-[0.125rem]  "
                    type="submit"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      class="icon searchhover "
                      data-nimg="1"
                      decoding="async"
                      height="40"
                      loading="lazy"
                      src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                      srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                      style="color: transparent;"
                      width="40"
                    />
                  </button>
                </div>
              </div>
            </section>
            <div
              aria-label="Claims list controls"
              class="xs:block md:inline-flex max-sm:my-4 md:my-2"
              role="toolbar"
            >
              <div
                class="flex flex-row body-1 flex-grow align-top mb-0"
              >
                <span
                  id="filter-label"
                >
                  Filter Results:
                </span>
                 
                <a
                  aria-label="Download 1 claims"
                  class="link ml-2 flex"
                  href="#"
                >
                  1
                   Claims
                  <img
                    alt=""
                    aria-hidden="true"
                    class="w-[20px] h-[20px] ml-2"
                    data-nimg="1"
                    decoding="async"
                    height="40"
                    loading="lazy"
                    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                    style="color: transparent;"
                    width="40"
                  />
                </a>
              </div>
              <div
                class="flex flex-row body-1 items-end"
              >
                <span
                  id="sort-label"
                >
                  Sort by:
                </span>
                 
                <div>
                  <div
                    class="rich-dropdown"
                  >
                    <div
                      class="flex flex-col switch-filter default"
                      tabindex="1"
                    >
                      <div>
                        <a
                          aria-labelledby="sort-label"
                          class="link ml-2 flex"
                        >
                          Date (Most Recent)
                           
                          <img
                            alt=""
                            aria-hidden="true"
                            class="w-[20px] h-[20px] ml-2"
                            data-nimg="1"
                            decoding="async"
                            height="40"
                            loading="lazy"
                            src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                            srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                            style="color: transparent;"
                            width="40"
                          />
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
              />
            </div>
            <div
              aria-label="Claims list"
              class="flex flex-col max-sm:my-4"
              role="region"
            >
              <span
                style="display: block; width: 1px; min-width: 1px; height: 12px; min-height: 12px;"
              />
              <div
                class="flex flex-col"
              />
              <section>
                <ul
                  aria-label="pagination"
                  class="pagination-container pagination"
                >
                  <li
                    class="pagination-item disabled"
                  >
                    <div
                      class="flex flex-row arrow left"
                    >
                      <img
                        alt="previous"
                        data-nimg="1"
                        decoding="async"
                        height="40"
                        loading="lazy"
                        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                        style="color: transparent;"
                        width="40"
                      />
                      <p
                        class="body-1 pt-1"
                        style="display: block;"
                      >
                        Previous
                      </p>
                    </div>
                  </li>
                  <li
                    class="pagination-item disabled selected"
                  >
                    1
                  </li>
                  <li
                    class="pagination-item disabled"
                  >
                    <div
                      class="flex flex-row arrow right"
                    >
                      <p
                        class="body-1 pt-1"
                        style="display: block;"
                      >
                        Next
                      </p>
                      <img
                        alt="next"
                        data-nimg="1"
                        decoding="async"
                        height="40"
                        loading="lazy"
                        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                        style="color: transparent;"
                        width="40"
                      />
                    </div>
                  </li>
                </ul>
                <ul
                  aria-label="pagination"
                  class="pagination-mobile-container pagination"
                >
                  <li
                    class="pagination-item disabled"
                  >
                    <div
                      class="flex flex-row arrow left"
                    >
                      <img
                        alt="previous"
                        data-nimg="1"
                        decoding="async"
                        height="40"
                        loading="lazy"
                        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                        style="color: transparent;"
                        width="40"
                      />
                    </div>
                  </li>
                  <div
                    class="flex flex-row"
                  >
                    <span
                      style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                    />
                    <p
                      class="body-1 body-1"
                      style="display: block;"
                    >
                      Page: 
                    </p>
                    <span
                      style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                    />
                    <div
                      class="relative"
                    >
                      <div
                        class="flex flex-row link"
                        tabindex="0"
                      >
                        <p
                          class="body-bold"
                        >
                          1
                        </p>
                        <span
                          style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                        />
                        <img
                          alt="down icon"
                          data-nimg="1"
                          decoding="async"
                          height="40"
                          loading="lazy"
                          src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                          srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                          style="color: transparent;"
                          width="40"
                        />
                      </div>
                      <section
                        class="card-elevated z-20 dropdown-section"
                        style="display: none; position: absolute;"
                      >
                        <div
                          class="flex flex-row dropdown-item-selected dropdown-item p-2 cursor-pointer"
                        >
                          <div
                            class="size-5 mx-2 "
                          >
                            <img
                              alt="selcted"
                              class="size-5"
                              data-nimg="1"
                              decoding="async"
                              height="40"
                              loading="lazy"
                              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                              style="color: transparent;"
                              width="40"
                            />
                          </div>
                          <div>
                            <p
                              class="whitespace-nowrap mx-2"
                            >
                              1
                            </p>
                          </div>
                        </div>
                      </section>
                    </div>
                    <span
                      style="display: block; width: 4px; min-width: 4px; height: 1px; min-height: 1px;"
                    />
                    <p
                      class="body-1 body-1"
                      style="display: block;"
                    >
                      of 1
                    </p>
                  </div>
                  <li
                    class="pagination-item disabled"
                  >
                    <div
                      class="flex flex-row arrow right"
                    >
                      <img
                        alt="next"
                        data-nimg="1"
                        decoding="async"
                        height="40"
                        loading="lazy"
                        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                        style="color: transparent;"
                        width="40"
                      />
                    </div>
                  </li>
                </ul>
              </section>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
            </div>
          </div>
        </div>
      </section>
    </div>
  </main>
</div>
`;

exports[`Claims SnapshotList Filter should filter the claims correctly 2`] = `
<div>
  <main
    class="flex flex-col justify-center items-center page"
  >
    <div
      class="flex flex-col app-content app-base-font-color"
    >
      <h2
        class="title-2 mb-0 !font-light !text-[32px]/[40px]"
      >
        Claims
      </h2>
      <span
        style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
      />
      <section
        class="flex justify-start self-start"
      >
        <div
          class="flex flex-col"
        >
          <span
            class="rich-text body-1 mb-4"
          >
            <span>
              If you need more than two years of claims,
               
            </span>
            <span
              class="link font-bold"
            >
              start a chat
            </span>
            <span>
               or call us at [1-800-000-000].
            </span>
          </span>
          <span
            class="rich-text body-1 undefined"
          >
            <span>
              Need to submit a claim? 
            </span>
            <span
              class="link font-bold"
            >
              <a
                href="/claims/submitAClaim"
              >
                Get the form you need
              </a>
            </span>
            <span>
              .
            </span>
          </span>
        </div>
      </section>
      <section
        class="flex flex-row items-start app-body"
        id="Filter"
      >
        <div
          class="flex flex-col  flex-grow page-section-36_67 items-stretch"
        >
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
          <div
            class="card-main large-section px-0 m-0"
          >
            <div
              class="flex flex-col"
            >
              <h1
                class="title-1 title-2"
              >
                Filter Claims
              </h1>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
              />
              <div
                class="flex flex-col"
              >
                <div
                  class="body-1"
                >
                  Member
                   
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <div>
                  <div
                    class="rich-dropdown"
                  >
                    <div
                      class="flex flex-col switch-filter default"
                      tabindex="1"
                    >
                      <div>
                        <div
                          class="body-1 input"
                        >
                          <div
                            class="flex flex-row p-1 items-center"
                          >
                            <div
                              class="flex flex-col border-none flex-grow"
                            >
                              <p
                                class="body-1"
                                style="display: block;"
                              >
                                CHRISTOCLAIM HALL
                              </p>
                            </div>
                            <img
                              alt=""
                              class="w-[20px] h-[20px] ml-2 items-end"
                              data-nimg="1"
                              decoding="async"
                              height="40"
                              loading="lazy"
                              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                              style="color: transparent;"
                              width="40"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
              <div
                class="flex flex-col"
              >
                <div
                  class="body-1"
                >
                  Claim Type
                   
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <div>
                  <div
                    class="rich-dropdown"
                  >
                    <div
                      class="flex flex-col switch-filter default"
                      tabindex="1"
                    >
                      <div>
                        <div
                          class="body-1 input"
                        >
                          <div
                            class="flex flex-row p-1 items-center"
                          >
                            <div
                              class="flex flex-col border-none flex-grow"
                            >
                              <p
                                class="body-1"
                                style="display: block;"
                              >
                                All Types
                              </p>
                            </div>
                            <img
                              alt=""
                              class="w-[20px] h-[20px] ml-2 items-end"
                              data-nimg="1"
                              decoding="async"
                              height="40"
                              loading="lazy"
                              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                              style="color: transparent;"
                              width="40"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
              <div
                class="flex flex-col"
              >
                <div
                  class="body-1"
                >
                  Date Range
                   
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <div>
                  <div
                    class="rich-dropdown"
                  >
                    <div
                      class="flex flex-col switch-filter default"
                      tabindex="1"
                    >
                      <div>
                        <div
                          class="body-1 input"
                        >
                          <div
                            class="flex flex-row p-1 items-center"
                          >
                            <div
                              class="flex flex-col border-none flex-grow"
                            >
                              <p
                                class="body-1"
                                style="display: block;"
                              >
                                Last Two Years
                              </p>
                            </div>
                            <img
                              alt=""
                              class="w-[20px] h-[20px] ml-2 items-end"
                              data-nimg="1"
                              decoding="async"
                              height="40"
                              loading="lazy"
                              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                              style="color: transparent;"
                              width="40"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
              <a
                class="link flex !no-underline"
                href="#"
              >
                <img
                  alt=""
                  class="w-[20px] h-[20px] ml-2 mr-2 items-end"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
                Reset Filter
              </a>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
            </div>
          </div>
        </div>
        <div
          class="flex flex-col flex-grow page-section-63_33 items-stretch"
        >
          <div
            class="flex flex-col"
          >
            <section
              class="card-main max-sm:my-4 md:my-8"
              role="search"
            >
              <div
                class="flex flex-row items-center input   "
              >
                <input
                  aria-label="Search claims by member name, provider name, or claim ID"
                  class="body-1 search-textfield"
                  name="search-Field"
                  placeholder="Search Claims..."
                  type="text"
                  value=""
                />
                <div
                  class="flex flex-col items-end"
                >
                  <button
                    aria-label="Search"
                    class="flex flex-col p-[0.125rem]  "
                    type="submit"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      class="icon searchhover "
                      data-nimg="1"
                      decoding="async"
                      height="40"
                      loading="lazy"
                      src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                      srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                      style="color: transparent;"
                      width="40"
                    />
                  </button>
                </div>
              </div>
            </section>
            <div
              aria-label="Claims list controls"
              class="xs:block md:inline-flex max-sm:my-4 md:my-2"
              role="toolbar"
            >
              <div
                class="flex flex-row body-1 flex-grow align-top mb-0"
              >
                <span
                  id="filter-label"
                >
                  Filter Results:
                </span>
                 
                <a
                  aria-label="Download 12 claims"
                  class="link ml-2 flex"
                  href="#"
                >
                  12
                   Claims
                  <img
                    alt=""
                    aria-hidden="true"
                    class="w-[20px] h-[20px] ml-2"
                    data-nimg="1"
                    decoding="async"
                    height="40"
                    loading="lazy"
                    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                    style="color: transparent;"
                    width="40"
                  />
                </a>
              </div>
              <div
                class="flex flex-row body-1 items-end"
              >
                <span
                  id="sort-label"
                >
                  Sort by:
                </span>
                 
                <div>
                  <div
                    class="rich-dropdown"
                  >
                    <div
                      class="flex flex-col switch-filter default"
                      tabindex="1"
                    >
                      <div>
                        <a
                          aria-labelledby="sort-label"
                          class="link ml-2 flex"
                        >
                          Date (Most Recent)
                           
                          <img
                            alt=""
                            aria-hidden="true"
                            class="w-[20px] h-[20px] ml-2"
                            data-nimg="1"
                            decoding="async"
                            height="40"
                            loading="lazy"
                            src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                            srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                            style="color: transparent;"
                            width="40"
                          />
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
              />
            </div>
            <div
              aria-label="Claims list"
              class="flex flex-col max-sm:my-4"
              role="region"
            >
              <span
                style="display: block; width: 1px; min-width: 1px; height: 12px; min-height: 12px;"
              />
              <div
                class="flex flex-col"
              />
              <section>
                <ul
                  aria-label="pagination"
                  class="pagination-container pagination"
                >
                  <li
                    class="pagination-item disabled"
                  >
                    <div
                      class="flex flex-row arrow left"
                    >
                      <img
                        alt="previous"
                        data-nimg="1"
                        decoding="async"
                        height="40"
                        loading="lazy"
                        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                        style="color: transparent;"
                        width="40"
                      />
                      <p
                        class="body-1 pt-1"
                        style="display: block;"
                      >
                        Previous
                      </p>
                    </div>
                  </li>
                  <li
                    class="pagination-item disabled selected"
                  >
                    1
                  </li>
                  <li
                    class="pagination-item"
                  >
                    2
                  </li>
                  <li
                    class="pagination-item"
                  >
                    <div
                      class="flex flex-row arrow right"
                    >
                      <p
                        class="body-1 pt-1"
                        style="display: block;"
                      >
                        Next
                      </p>
                      <img
                        alt="next"
                        class="right-icon"
                        data-nimg="1"
                        decoding="async"
                        height="40"
                        loading="lazy"
                        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                        style="color: transparent;"
                        width="40"
                      />
                      <img
                        alt="next"
                        class="right-icon-white"
                        data-nimg="1"
                        decoding="async"
                        height="40"
                        loading="lazy"
                        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                        style="color: transparent;"
                        width="40"
                      />
                    </div>
                  </li>
                </ul>
                <ul
                  aria-label="pagination"
                  class="pagination-mobile-container pagination"
                >
                  <li
                    class="pagination-item disabled"
                  >
                    <div
                      class="flex flex-row arrow left"
                    >
                      <img
                        alt="previous"
                        data-nimg="1"
                        decoding="async"
                        height="40"
                        loading="lazy"
                        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                        style="color: transparent;"
                        width="40"
                      />
                    </div>
                  </li>
                  <div
                    class="flex flex-row"
                  >
                    <span
                      style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                    />
                    <p
                      class="body-1 body-1"
                      style="display: block;"
                    >
                      Page: 
                    </p>
                    <span
                      style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                    />
                    <div
                      class="relative"
                    >
                      <div
                        class="flex flex-row link"
                        tabindex="0"
                      >
                        <p
                          class="body-bold"
                        >
                          1
                        </p>
                        <span
                          style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                        />
                        <img
                          alt="down icon"
                          data-nimg="1"
                          decoding="async"
                          height="40"
                          loading="lazy"
                          src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                          srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                          style="color: transparent;"
                          width="40"
                        />
                      </div>
                      <section
                        class="card-elevated z-20 dropdown-section"
                        style="display: none; position: absolute;"
                      >
                        <div
                          class="flex flex-row dropdown-item-selected dropdown-item p-2 cursor-pointer"
                        >
                          <div
                            class="size-5 mx-2 "
                          >
                            <img
                              alt="selcted"
                              class="size-5"
                              data-nimg="1"
                              decoding="async"
                              height="40"
                              loading="lazy"
                              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                              style="color: transparent;"
                              width="40"
                            />
                          </div>
                          <div>
                            <p
                              class="whitespace-nowrap mx-2"
                            >
                              1
                            </p>
                          </div>
                        </div>
                        <div
                          class="flex flex-row  dropdown-item p-2 cursor-pointer"
                        >
                          <div
                            class="size-5 mx-2"
                          />
                          <div>
                            <p
                              class="whitespace-nowrap mx-2"
                            >
                              2
                            </p>
                          </div>
                        </div>
                      </section>
                    </div>
                    <span
                      style="display: block; width: 4px; min-width: 4px; height: 1px; min-height: 1px;"
                    />
                    <p
                      class="body-1 body-1"
                      style="display: block;"
                    >
                      of 2
                    </p>
                  </div>
                  <li
                    class="pagination-item"
                  >
                    <div
                      class="flex flex-row arrow right"
                    >
                      <img
                        alt="next"
                        class="right-icon"
                        data-nimg="1"
                        decoding="async"
                        height="40"
                        loading="lazy"
                        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                        style="color: transparent;"
                        width="40"
                      />
                      <img
                        alt="next"
                        class="right-icon-white"
                        data-nimg="1"
                        decoding="async"
                        height="40"
                        loading="lazy"
                        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                        style="color: transparent;"
                        width="40"
                      />
                    </div>
                  </li>
                </ul>
              </section>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
            </div>
          </div>
        </div>
      </section>
    </div>
  </main>
</div>
`;

exports[`Claims SnapshotList Filter should filter the claims correctly 3`] = `
<div>
  <main
    class="flex flex-col justify-center items-center page"
  >
    <div
      class="flex flex-col app-content app-base-font-color"
    >
      <h2
        class="title-2 mb-0 !font-light !text-[32px]/[40px]"
      >
        Claims
      </h2>
      <span
        style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
      />
      <section
        class="flex justify-start self-start"
      >
        <div
          class="flex flex-col"
        >
          <span
            class="rich-text body-1 mb-4"
          >
            <span>
              If you need more than two years of claims,
               
            </span>
            <span
              class="link font-bold"
            >
              start a chat
            </span>
            <span>
               or call us at [1-800-000-000].
            </span>
          </span>
          <span
            class="rich-text body-1 undefined"
          >
            <span>
              Need to submit a claim? 
            </span>
            <span
              class="link font-bold"
            >
              <a
                href="/claims/submitAClaim"
              >
                Get the form you need
              </a>
            </span>
            <span>
              .
            </span>
          </span>
        </div>
      </section>
      <section
        class="flex flex-row items-start app-body"
        id="Filter"
      >
        <div
          class="flex flex-col  flex-grow page-section-36_67 items-stretch"
        >
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
          <div
            class="card-main large-section px-0 m-0"
          >
            <div
              class="flex flex-col"
            >
              <h1
                class="title-1 title-2"
              >
                Filter Claims
              </h1>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
              />
              <div
                class="flex flex-col"
              >
                <div
                  class="body-1"
                >
                  Member
                   
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <div>
                  <div
                    class="rich-dropdown"
                  >
                    <div
                      class="flex flex-col switch-filter default"
                      tabindex="1"
                    >
                      <div>
                        <div
                          class="body-1 input"
                        >
                          <div
                            class="flex flex-row p-1 items-center"
                          >
                            <div
                              class="flex flex-col border-none flex-grow"
                            >
                              <p
                                class="body-1"
                                style="display: block;"
                              >
                                CHRISTOCLAIM HALL
                              </p>
                            </div>
                            <img
                              alt=""
                              class="w-[20px] h-[20px] ml-2 items-end"
                              data-nimg="1"
                              decoding="async"
                              height="40"
                              loading="lazy"
                              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                              style="color: transparent;"
                              width="40"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
              <div
                class="flex flex-col"
              >
                <div
                  class="body-1"
                >
                  Claim Type
                   
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <div>
                  <div
                    class="rich-dropdown"
                  >
                    <div
                      class="flex flex-col switch-filter default"
                      tabindex="1"
                    >
                      <div>
                        <div
                          class="body-1 input"
                        >
                          <div
                            class="flex flex-row p-1 items-center"
                          >
                            <div
                              class="flex flex-col border-none flex-grow"
                            >
                              <p
                                class="body-1"
                                style="display: block;"
                              >
                                All Types
                              </p>
                            </div>
                            <img
                              alt=""
                              class="w-[20px] h-[20px] ml-2 items-end"
                              data-nimg="1"
                              decoding="async"
                              height="40"
                              loading="lazy"
                              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                              style="color: transparent;"
                              width="40"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
              <div
                class="flex flex-col"
              >
                <div
                  class="body-1"
                >
                  Date Range
                   
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <div>
                  <div
                    class="rich-dropdown"
                  >
                    <div
                      class="flex flex-col switch-filter default"
                      tabindex="1"
                    >
                      <div>
                        <div
                          class="body-1 input"
                        >
                          <div
                            class="flex flex-row p-1 items-center"
                          >
                            <div
                              class="flex flex-col border-none flex-grow"
                            >
                              <p
                                class="body-1"
                                style="display: block;"
                              >
                                Last 90 Days
                              </p>
                            </div>
                            <img
                              alt=""
                              class="w-[20px] h-[20px] ml-2 items-end"
                              data-nimg="1"
                              decoding="async"
                              height="40"
                              loading="lazy"
                              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                              style="color: transparent;"
                              width="40"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
              <a
                class="link flex !no-underline"
                href="#"
              >
                <img
                  alt=""
                  class="w-[20px] h-[20px] ml-2 mr-2 items-end"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
                Reset Filter
              </a>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
            </div>
          </div>
        </div>
        <div
          class="flex flex-col flex-grow page-section-63_33 items-stretch"
        >
          <div
            class="flex flex-col"
          >
            <section
              class="card-main max-sm:my-4 md:my-8"
              role="search"
            >
              <div
                class="flex flex-row items-center input   "
              >
                <input
                  aria-label="Search claims by member name, provider name, or claim ID"
                  class="body-1 search-textfield"
                  name="search-Field"
                  placeholder="Search Claims..."
                  type="text"
                  value=""
                />
                <div
                  class="flex flex-col items-end"
                >
                  <button
                    aria-label="Search"
                    class="flex flex-col p-[0.125rem]  "
                    type="submit"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      class="icon searchhover "
                      data-nimg="1"
                      decoding="async"
                      height="40"
                      loading="lazy"
                      src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                      srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                      style="color: transparent;"
                      width="40"
                    />
                  </button>
                </div>
              </div>
            </section>
            <div
              aria-label="Claims list controls"
              class="xs:block md:inline-flex max-sm:my-4 md:my-2"
              role="toolbar"
            >
              <div
                class="flex flex-row body-1 flex-grow align-top mb-0"
              >
                <span
                  id="filter-label"
                >
                  Filter Results:
                </span>
                 
                <a
                  aria-label="Download 9 claims"
                  class="link ml-2 flex"
                  href="#"
                >
                  9
                   Claims
                  <img
                    alt=""
                    aria-hidden="true"
                    class="w-[20px] h-[20px] ml-2"
                    data-nimg="1"
                    decoding="async"
                    height="40"
                    loading="lazy"
                    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                    style="color: transparent;"
                    width="40"
                  />
                </a>
              </div>
              <div
                class="flex flex-row body-1 items-end"
              >
                <span
                  id="sort-label"
                >
                  Sort by:
                </span>
                 
                <div>
                  <div
                    class="rich-dropdown"
                  >
                    <div
                      class="flex flex-col switch-filter default"
                      tabindex="1"
                    >
                      <div>
                        <a
                          aria-labelledby="sort-label"
                          class="link ml-2 flex"
                        >
                          Date (Most Recent)
                           
                          <img
                            alt=""
                            aria-hidden="true"
                            class="w-[20px] h-[20px] ml-2"
                            data-nimg="1"
                            decoding="async"
                            height="40"
                            loading="lazy"
                            src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                            srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                            style="color: transparent;"
                            width="40"
                          />
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
              />
            </div>
            <div
              aria-label="Claims list"
              class="flex flex-col max-sm:my-4"
              role="region"
            >
              <span
                style="display: block; width: 1px; min-width: 1px; height: 12px; min-height: 12px;"
              />
              <div
                class="flex flex-col"
              />
              <section>
                <ul
                  aria-label="pagination"
                  class="pagination-container pagination"
                >
                  <li
                    class="pagination-item disabled"
                  >
                    <div
                      class="flex flex-row arrow left"
                    >
                      <img
                        alt="previous"
                        data-nimg="1"
                        decoding="async"
                        height="40"
                        loading="lazy"
                        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                        style="color: transparent;"
                        width="40"
                      />
                      <p
                        class="body-1 pt-1"
                        style="display: block;"
                      >
                        Previous
                      </p>
                    </div>
                  </li>
                  <li
                    class="pagination-item disabled selected"
                  >
                    1
                  </li>
                  <li
                    class="pagination-item disabled"
                  >
                    <div
                      class="flex flex-row arrow right"
                    >
                      <p
                        class="body-1 pt-1"
                        style="display: block;"
                      >
                        Next
                      </p>
                      <img
                        alt="next"
                        data-nimg="1"
                        decoding="async"
                        height="40"
                        loading="lazy"
                        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                        style="color: transparent;"
                        width="40"
                      />
                    </div>
                  </li>
                </ul>
                <ul
                  aria-label="pagination"
                  class="pagination-mobile-container pagination"
                >
                  <li
                    class="pagination-item disabled"
                  >
                    <div
                      class="flex flex-row arrow left"
                    >
                      <img
                        alt="previous"
                        data-nimg="1"
                        decoding="async"
                        height="40"
                        loading="lazy"
                        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                        style="color: transparent;"
                        width="40"
                      />
                    </div>
                  </li>
                  <div
                    class="flex flex-row"
                  >
                    <span
                      style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                    />
                    <p
                      class="body-1 body-1"
                      style="display: block;"
                    >
                      Page: 
                    </p>
                    <span
                      style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                    />
                    <div
                      class="relative"
                    >
                      <div
                        class="flex flex-row link"
                        tabindex="0"
                      >
                        <p
                          class="body-bold"
                        >
                          1
                        </p>
                        <span
                          style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                        />
                        <img
                          alt="down icon"
                          data-nimg="1"
                          decoding="async"
                          height="40"
                          loading="lazy"
                          src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                          srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                          style="color: transparent;"
                          width="40"
                        />
                      </div>
                      <section
                        class="card-elevated z-20 dropdown-section"
                        style="display: none; position: absolute;"
                      >
                        <div
                          class="flex flex-row dropdown-item-selected dropdown-item p-2 cursor-pointer"
                        >
                          <div
                            class="size-5 mx-2 "
                          >
                            <img
                              alt="selcted"
                              class="size-5"
                              data-nimg="1"
                              decoding="async"
                              height="40"
                              loading="lazy"
                              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                              style="color: transparent;"
                              width="40"
                            />
                          </div>
                          <div>
                            <p
                              class="whitespace-nowrap mx-2"
                            >
                              1
                            </p>
                          </div>
                        </div>
                      </section>
                    </div>
                    <span
                      style="display: block; width: 4px; min-width: 4px; height: 1px; min-height: 1px;"
                    />
                    <p
                      class="body-1 body-1"
                      style="display: block;"
                    >
                      of 1
                    </p>
                  </div>
                  <li
                    class="pagination-item disabled"
                  >
                    <div
                      class="flex flex-row arrow right"
                    >
                      <img
                        alt="next"
                        data-nimg="1"
                        decoding="async"
                        height="40"
                        loading="lazy"
                        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                        style="color: transparent;"
                        width="40"
                      />
                    </div>
                  </li>
                </ul>
              </section>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
            </div>
          </div>
        </div>
      </section>
    </div>
  </main>
</div>
`;

exports[`Claims SnapshotList Filter should filter the claims correctly 4`] = `
<div>
  <main
    class="flex flex-col justify-center items-center page"
  >
    <div
      class="flex flex-col app-content app-base-font-color"
    >
      <h2
        class="title-2 mb-0 !font-light !text-[32px]/[40px]"
      >
        Claims
      </h2>
      <span
        style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
      />
      <section
        class="flex justify-start self-start"
      >
        <div
          class="flex flex-col"
        >
          <span
            class="rich-text body-1 mb-4"
          >
            <span>
              If you need more than two years of claims,
               
            </span>
            <span
              class="link font-bold"
            >
              start a chat
            </span>
            <span>
               or call us at [1-800-000-000].
            </span>
          </span>
          <span
            class="rich-text body-1 undefined"
          >
            <span>
              Need to submit a claim? 
            </span>
            <span
              class="link font-bold"
            >
              <a
                href="/claims/submitAClaim"
              >
                Get the form you need
              </a>
            </span>
            <span>
              .
            </span>
          </span>
        </div>
      </section>
      <section
        class="flex flex-row items-start app-body"
        id="Filter"
      >
        <div
          class="flex flex-col  flex-grow page-section-36_67 items-stretch"
        >
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
          <div
            class="card-main large-section px-0 m-0"
          >
            <div
              class="flex flex-col"
            >
              <h1
                class="title-1 title-2"
              >
                Filter Claims
              </h1>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
              />
              <div
                class="flex flex-col"
              >
                <div
                  class="body-1"
                >
                  Member
                   
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <div>
                  <div
                    class="rich-dropdown"
                  >
                    <div
                      class="flex flex-col switch-filter default"
                      tabindex="1"
                    >
                      <div>
                        <div
                          class="body-1 input"
                        >
                          <div
                            class="flex flex-row p-1 items-center"
                          >
                            <div
                              class="flex flex-col border-none flex-grow"
                            >
                              <p
                                class="body-1"
                                style="display: block;"
                              >
                                CHRISTOCLAIM HALL
                              </p>
                            </div>
                            <img
                              alt=""
                              class="w-[20px] h-[20px] ml-2 items-end"
                              data-nimg="1"
                              decoding="async"
                              height="40"
                              loading="lazy"
                              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                              style="color: transparent;"
                              width="40"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
              <div
                class="flex flex-col"
              >
                <div
                  class="body-1"
                >
                  Claim Type
                   
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <div>
                  <div
                    class="rich-dropdown"
                  >
                    <div
                      class="flex flex-col switch-filter default"
                      tabindex="1"
                    >
                      <div>
                        <div
                          class="body-1 input"
                        >
                          <div
                            class="flex flex-row p-1 items-center"
                          >
                            <div
                              class="flex flex-col border-none flex-grow"
                            >
                              <p
                                class="body-1"
                                style="display: block;"
                              >
                                Dental
                              </p>
                            </div>
                            <img
                              alt=""
                              class="w-[20px] h-[20px] ml-2 items-end"
                              data-nimg="1"
                              decoding="async"
                              height="40"
                              loading="lazy"
                              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                              style="color: transparent;"
                              width="40"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
              <div
                class="flex flex-col"
              >
                <div
                  class="body-1"
                >
                  Date Range
                   
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 5px; min-height: 5px;"
                />
                <div>
                  <div
                    class="rich-dropdown"
                  >
                    <div
                      class="flex flex-col switch-filter default"
                      tabindex="1"
                    >
                      <div>
                        <div
                          class="body-1 input"
                        >
                          <div
                            class="flex flex-row p-1 items-center"
                          >
                            <div
                              class="flex flex-col border-none flex-grow"
                            >
                              <p
                                class="body-1"
                                style="display: block;"
                              >
                                Last Two Years
                              </p>
                            </div>
                            <img
                              alt=""
                              class="w-[20px] h-[20px] ml-2 items-end"
                              data-nimg="1"
                              decoding="async"
                              height="40"
                              loading="lazy"
                              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                              style="color: transparent;"
                              width="40"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
              <a
                class="link flex !no-underline"
                href="#"
              >
                <img
                  alt=""
                  class="w-[20px] h-[20px] ml-2 mr-2 items-end"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
                Reset Filter
              </a>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
            </div>
          </div>
        </div>
        <div
          class="flex flex-col flex-grow page-section-63_33 items-stretch"
        >
          <div
            class="flex flex-col"
          >
            <section
              class="card-main max-sm:my-4 md:my-8"
              role="search"
            >
              <div
                class="flex flex-row items-center input   "
              >
                <input
                  aria-label="Search claims by member name, provider name, or claim ID"
                  class="body-1 search-textfield"
                  name="search-Field"
                  placeholder="Search Claims..."
                  type="text"
                  value=""
                />
                <div
                  class="flex flex-col items-end"
                >
                  <button
                    aria-label="Search"
                    class="flex flex-col p-[0.125rem]  "
                    type="submit"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      class="icon searchhover "
                      data-nimg="1"
                      decoding="async"
                      height="40"
                      loading="lazy"
                      src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                      srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                      style="color: transparent;"
                      width="40"
                    />
                  </button>
                </div>
              </div>
            </section>
            <div
              aria-label="Claims list controls"
              class="xs:block md:inline-flex max-sm:my-4 md:my-2"
              role="toolbar"
            >
              <div
                class="flex flex-row body-1 flex-grow align-top mb-0"
              >
                <span
                  id="filter-label"
                >
                  Filter Results:
                </span>
                 
                <a
                  aria-label="Download 1 claims"
                  class="link ml-2 flex"
                  href="#"
                >
                  1
                   Claims
                  <img
                    alt=""
                    aria-hidden="true"
                    class="w-[20px] h-[20px] ml-2"
                    data-nimg="1"
                    decoding="async"
                    height="40"
                    loading="lazy"
                    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                    style="color: transparent;"
                    width="40"
                  />
                </a>
              </div>
              <div
                class="flex flex-row body-1 items-end"
              >
                <span
                  id="sort-label"
                >
                  Sort by:
                </span>
                 
                <div>
                  <div
                    class="rich-dropdown"
                  >
                    <div
                      class="flex flex-col switch-filter default"
                      tabindex="1"
                    >
                      <div>
                        <a
                          aria-labelledby="sort-label"
                          class="link ml-2 flex"
                        >
                          Date (Most Recent)
                           
                          <img
                            alt=""
                            aria-hidden="true"
                            class="w-[20px] h-[20px] ml-2"
                            data-nimg="1"
                            decoding="async"
                            height="40"
                            loading="lazy"
                            src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                            srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                            style="color: transparent;"
                            width="40"
                          />
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
              />
            </div>
            <div
              aria-label="Claims list"
              class="flex flex-col max-sm:my-4"
              role="region"
            >
              <span
                style="display: block; width: 1px; min-width: 1px; height: 12px; min-height: 12px;"
              />
              <div
                class="flex flex-col"
              />
              <section>
                <ul
                  aria-label="pagination"
                  class="pagination-container pagination"
                >
                  <li
                    class="pagination-item disabled"
                  >
                    <div
                      class="flex flex-row arrow left"
                    >
                      <img
                        alt="previous"
                        data-nimg="1"
                        decoding="async"
                        height="40"
                        loading="lazy"
                        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                        style="color: transparent;"
                        width="40"
                      />
                      <p
                        class="body-1 pt-1"
                        style="display: block;"
                      >
                        Previous
                      </p>
                    </div>
                  </li>
                  <li
                    class="pagination-item disabled selected"
                  >
                    1
                  </li>
                  <li
                    class="pagination-item disabled"
                  >
                    <div
                      class="flex flex-row arrow right"
                    >
                      <p
                        class="body-1 pt-1"
                        style="display: block;"
                      >
                        Next
                      </p>
                      <img
                        alt="next"
                        data-nimg="1"
                        decoding="async"
                        height="40"
                        loading="lazy"
                        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                        style="color: transparent;"
                        width="40"
                      />
                    </div>
                  </li>
                </ul>
                <ul
                  aria-label="pagination"
                  class="pagination-mobile-container pagination"
                >
                  <li
                    class="pagination-item disabled"
                  >
                    <div
                      class="flex flex-row arrow left"
                    >
                      <img
                        alt="previous"
                        data-nimg="1"
                        decoding="async"
                        height="40"
                        loading="lazy"
                        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                        style="color: transparent;"
                        width="40"
                      />
                    </div>
                  </li>
                  <div
                    class="flex flex-row"
                  >
                    <span
                      style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                    />
                    <p
                      class="body-1 body-1"
                      style="display: block;"
                    >
                      Page: 
                    </p>
                    <span
                      style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                    />
                    <div
                      class="relative"
                    >
                      <div
                        class="flex flex-row link"
                        tabindex="0"
                      >
                        <p
                          class="body-bold"
                        >
                          1
                        </p>
                        <span
                          style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
                        />
                        <img
                          alt="down icon"
                          data-nimg="1"
                          decoding="async"
                          height="40"
                          loading="lazy"
                          src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                          srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                          style="color: transparent;"
                          width="40"
                        />
                      </div>
                      <section
                        class="card-elevated z-20 dropdown-section"
                        style="display: none; position: absolute;"
                      >
                        <div
                          class="flex flex-row dropdown-item-selected dropdown-item p-2 cursor-pointer"
                        >
                          <div
                            class="size-5 mx-2 "
                          >
                            <img
                              alt="selcted"
                              class="size-5"
                              data-nimg="1"
                              decoding="async"
                              height="40"
                              loading="lazy"
                              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                              style="color: transparent;"
                              width="40"
                            />
                          </div>
                          <div>
                            <p
                              class="whitespace-nowrap mx-2"
                            >
                              1
                            </p>
                          </div>
                        </div>
                      </section>
                    </div>
                    <span
                      style="display: block; width: 4px; min-width: 4px; height: 1px; min-height: 1px;"
                    />
                    <p
                      class="body-1 body-1"
                      style="display: block;"
                    >
                      of 1
                    </p>
                  </div>
                  <li
                    class="pagination-item disabled"
                  >
                    <div
                      class="flex flex-row arrow right"
                    >
                      <img
                        alt="next"
                        data-nimg="1"
                        decoding="async"
                        height="40"
                        loading="lazy"
                        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                        style="color: transparent;"
                        width="40"
                      />
                    </div>
                  </li>
                </ul>
              </section>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
              />
            </div>
          </div>
        </div>
      </section>
    </div>
  </main>
</div>
`;
